@@ -1,6 +1,11 @@
 2007-10-26  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
+		- (nma_update_info): update for speed/bitrate type changes
+
+2007-10-26  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
 		- (nma_constructor, applet_add_default_ethernet_connection): add a
 			default ethernet connection if no connections were found.  Helps
 			out livecds.
